<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:minWidth="500dp">

    <TextView
        android:text="Adding item to cart"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:gravity="center"
        android:background="@color/teal_200"/>

    <TextView
        android:id="@+id/itemName"
        android:text="@string/ItemName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtAddCartItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="?android:textColorPrimary"
        android:text="@string/ItemPrice"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtAddCartItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/itemBrand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="?android:textColorPrimary"
        android:text="@string/ItemBrand"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtAddCartItemBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/itemLoc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="?android:textColorPrimary"
        android:text="@string/ItemLocation"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtAddCartItemLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/itemAmount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="?android:textColorPrimary"
        android:text="@string/ItemAmount"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtAddCartItemAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textSize="25sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:minWidth="500dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddCartItem_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="19sp">

        </Button>

        <Button
            android:id="@+id/btnAddCartItem_Confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:textSize="19sp">

        </Button>
    </LinearLayout>

</LinearLayout>